# taskbeep

./: .gitignore  .pre-commit-config.yaml  AUTHORS  Cargo.toml  LICENSE  README.md  config.toml.template
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
examples/: README.md
examples/on_beep/: fuzzel_prompt.sh  log_session.sh  motivational_messages.sh  notify_only.sh  rofi_prompt.sh  wofi_prompt.sh  zenity_prompt.sh
examples/waybar/: config  pomodoro.sh  style.css
src/: audio.rs  commands.rs  config.rs  error.rs  heatmap.rs  main.rs  protocol.rs  stats.rs  timer.rs  ui.rs  utils.rs
src/ui/: ascii.rs  layout_tests.rs  render.rs
tests/: e2e_smoke.rs
