[package]
name = "taskbeep"
authors = ["J. Adly <youssefadly237@gmail.com>"]
repository = "https://github.com/youssefadly237/taskbeep"
description = "TaskBeep - Pomodoro Timer with Productivity Tracking"
version = "0.1.12"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = ["pomodoro", "timer", "productivity", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rodio = "0.21"
ctrlc = "3.4"
daemonize = "0.5"
thiserror = "2.0"
serde_json = "1.0.148"
hound = "3.5.1"
