[package]
name = "taskbeep"
authors = ["J. Adly <youssefadly237@gmail.com>"]
repository = "https://github.com/youssefadly237/taskbeep"
description = "TaskBeep - Pomodoro Timer with Productivity Tracking"
version = "0.3.0"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = ["pomodoro", "timer", "productivity", "cli"]
categories = ["command-line-utilities"]

[features]
default = []
ui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rodio = "0.21"
ctrlc = "3.4"
daemonize = "0.5"
thiserror = "2.0"
serde_json = "1.0.148"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
time = { version = "0.3", features = ["local-offset"] }
ratatui = { version = "0.30.0", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29.0", optional = true }
